event-log.yaml
apiVersion: v1
kind: Pod
metadata:
  name: event-pod
spec:
  containers:
  - name: event-pod
    image: kodekloud/event-simulator
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: image-pod
    image: some-image-proce
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
