pod-bind-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  nodeName: node01 #podを編集してscheduleするためにnodeName指定
  containers:
  -  image: nginx
     name: nginx
