pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    name: myapp
    type: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx
