service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
  - targetPort: 80 # 接続対象のport。ここではpodのport
    port: 80 # podと繋げるservice側のpod
    nodePort: 30008 # 実際に呼ばれるport
  selector:
    app: myapp
    type: front-end
